--- a/OpenAlbum/res/values/strings.xml
+++ b/OpenAlbum/res/values/strings.xml
@@ -17,6 +17,7 @@
     
     <string name="CIRCLE_MARKER">Circles</string>
     <string name="NAVIGATION_MARKER">Arrows</string>
+    <string name="THUMBNAILS">Images</string>
     
     <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
 	<string name="option_not_available">Sorry, We are working on it... \nThis option will be available soon!</string>
