--- a/OpenAlbum/res/values/strings.xml
+++ b/OpenAlbum/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">OpenAlbum - Mixare</string>
+    <string name="app_name">Open Album</string>
     <string name="search_hint">Search Location</string>
     
     <string name="N">N</string>
@@ -13,7 +13,7 @@
     <string name="NW">NW</string>
     
     <string name="OSM">Openstreetmap</string>
-    <string name="MIXARE">Mixare</string>
+    <string name="MIXARE">Mixare API</string>
     
     <string name="CIRCLE_MARKER">Circles</string>
     <string name="NAVIGATION_MARKER">Arrows</string>
@@ -22,7 +22,7 @@
     <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
 	<string name="option_not_available">Sorry, We are working on it... \nThis option will be available soon!</string>
 	
-	<string name="license">Copyright (C) 2010- Peer internet solutions 
+	<string name="license">Open Album fork version of Mixare AR Engine. Copyright (C) 2010- Peer internet solutions 
 		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the 
 		GNU General Public License as published by the Free Software Foundation, either version 3 of the License, 
 		or at your option) any later version. 
@@ -98,7 +98,7 @@
 	<string name="set_osm_max_object">Maximum POIs per URL</string>
 	
 	<!--  Internal google api key -->
-	<string name="GoogleMapAPIKey">0bynx7meN9jlSdHQ4-lK_Vzsw-T82UVibnI0nCA</string>
+	<string name="GoogleMapAPIKey">0KzOW1H_Fma_rkLC_b14gO2AvgNkp4KnzG7m_xg</string>
 	
 	<!-- gonames dev username -->
 	<string name="GeonamesUsername">Devopenalbum</string>
