--- a/OpenAlbum/res/values/strings.xml
+++ b/OpenAlbum/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
 	<string name="option_not_available">Sorry, We are working on it... \nThis option will be available soon!</string>
 	
-	<string name="license">Open Album fork version of Mixare AR Engine. Copyright (C) 2010- Peer internet solutions 
+	<string name="license">Open Album is fork version of Mixare AR Engine. Copyright (C) 2010- Peer internet solutions 
 		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the 
 		GNU General Public License as published by the Free Software Foundation, either version 3 of the License, 
 		or at your option) any later version. 
@@ -33,7 +33,7 @@
 		If not, see &lt;http://www.gnu.org/licenses/&gt;
 	</string>
 	
-	<string name="menu_item_1">Data Source</string>
+	<string name="menu_item_1">Plates</string>
 	<string name="menu_item_2">List view</string>
 	<string name="menu_item_3">Map view</string>
 	<string name="menu_item_4">Zoom level</string>
